# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  CompileShaders.bat  HardwareRenderer.cpp  HardwareRenderer.h  README.md
Image/: Raytracer.cap
Image/Resources/Shaders/: raytrace.spv  sky.spv
src/: CMakeLists.txt  main.cpp  version.rc.in
src/Interface/: PerformanceStatsUI.hpp  RaytracerSettingsUI.hpp  SceneEditorUI.hpp  ToolUI.h
src/Maths/: Intersections.hpp  Ray.hpp  Vector.hpp
src/Renderers/: ModelLoader.cpp  ModelLoader.h  SoftwareRenderer.cpp  SoftwareRenderer.h
src/Renderers/Hardware/: CameraController.cpp  CameraController.h  HardwareRenderer.cpp  HardwareRenderer.h  InputManager.cpp  InputManager.h  PerformanceStats.cpp  PerformanceStats.h  RaytracerTypes.h  Window.cpp  Window.h
src/Renderers/Hardware/Imgui/: ImGuiFileDialog.h  ImGuiFileDialogConfig.h
src/Renderers/Hardware/Imgui/backends/: imgui_impl_sdl2.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/Renderers/Hardware/Vulkan/: VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanImages.cpp  VulkanImages.h  VulkanInitialisers.cpp  VulkanInitialisers.h  VulkanPipelines.cpp  VulkanPipelines.h  VulkanTypes.h
src/Renderers/Software/: Common.h  Hittable.h  Material.h  SoftwareRenderer.cpp  SoftwareRenderer.h  Texture.cpp  Texture.h
src/Renderers/Software/Maths/: AABB.cpp  AABB.h  BVH.h  Interval.cpp  Interval.h  Ray.h  Vector.h
src/Shaders/Compute/: Random.glsl  raytrace.comp
src/Useful/: Useful.h  UsefulFiles.cpp  UsefulFiles.h  UsefulStrings.cpp  UsefulStrings.h
